--- a/login.html
+++ b/login.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <form action="" method="post">
-        <label for="usuario">Usuario</label>
-        <input name="usuario" id="usuario" type="text">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" >
-        <button>Log in</button>
-    </form>
+    <div class="container-fluid">
+
+        <form class="row g-3 needs-validation">
+            <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+                <div class="row-cols-lg-5 row-cols-2 g-lg-3">
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email o Usuario</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+                <div class="row-cols-lg-5 row-cols-2 g-lg-3">
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                </div>
+            </div>
+            <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+                <div class="row-cols-lg-5 row-cols-2 g-lg-3">
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Recordar usuario</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">LOGIN</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
+
+</html>
+</body>
+
 </html>
