--- a/login.html
+++ b/login.html
@@ -12,36 +12,40 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-
-        <form class="row g-3 needs-validation">
-            <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-                <div class="row-cols-lg-5 row-cols-2 g-lg-3">
-                    <div class="mb-3">
+    <div class="container text-center">
+      
+        <form class="form row needs-validation">
+            <fieldset>
+            <legend>Inicio de sesión:</legend>
+            <div class="row row-cols-1">
+                <div>
+                    <div class="col-md">
                         <label for="exampleInputEmail1" class="form-label">Email o Usuario</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                         <div id="emailHelp" class="form-text"></div>
                     </div>
                 </div>
             </div>
-            <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-                <div class="row-cols-lg-5 row-cols-2 g-lg-3">
-                    <div class="mb-3">
+            <div class="row row-cols-1">
+                <div>
+                    <div class="col-md">
                         <label for="exampleInputPassword1" class="form-label">Contraseña</label>
                         <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
                 </div>
             </div>
-            <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
-                <div class="row-cols-lg-5 row-cols-2 g-lg-3">
-                    <div class="mb-3 form-check">
+            <div class="row row-cols-1">
+                <div>
+                    <div class="col-md form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Recordar usuario</label>
                     </div>
                     <button type="submit" class="btn btn-primary">LOGIN</button>
                 </div>
             </div>
+            </fieldset>
         </form>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
