--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                     </div>
                     <p class="small"><a class="text-primary" href="olvidada.html">¿Olvido la contraseña?</a></p>
                     <div class="d-grid">
-                        <button class="btn btn-primary" onclick="inicioSesion();" type="submit">Login</button>
+                        <button class="btn btn-primary" onclick="return inicioSesion();" type="submit">Login</button>
                     </div>
                 </form>
                 <div class="mt-3">
@@ -37,7 +37,9 @@
                 </div>
             </div>
         </div>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>  
+        <script src="assets/js/viaticket.js"></script>
     </body>
 
 </html>
