--- a/newTicket.html
+++ b/newTicket.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="assets/js/viaticket.js"></script>    
 </body>
 </html>
