--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Via Ticket</title>
+        <title> Via Ticket</title>
         
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -27,7 +27,7 @@
         </div>
       </nav>
 </header>
-<div class="container-fluid noPad">
+<div class="container-fluid">
   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -36,13 +36,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="1000">
-        <img src="assets/img/slide 1.jpg" class="d-block w-100" alt="...">
+        <img src="assets/img/slide 1.jpg" class="d-block w-100 noPad" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/img/slide 2.jpg" class="d-block w-100" alt="...">
+        <img src="assets/img/slide 2.jpg" class="d-block w-100 noPad" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="assets/img/slide 3.jpg" class="d-block w-100" alt="...">
+        <img src="assets/img/slide 3.jpg" class="d-block w-100 noPad" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -53,6 +53,21 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Siguiente</span>
     </button>
+  </div>
+  <div class="clearfix mt-4">
+    <img src="assets/img/team.jpg" class="rounded col-md-6 float-md-end mb-3 ms-md-3 col-sm-12" alt="...">
+    <h2>Acerca de Nosotros</h2>
+    <p>
+      A paragraph of placeholder text. We're using it here to show the use of the clearfix class. We're adding quite a few meaningless phrases here to demonstrate how the columns interact here with the floated image.
+    </p>
+  
+    <p>
+      As you can see the paragraphs gracefully wrap around the floated image. Now imagine how this would look with some actual content in here, rather than just this boring placeholder text that goes on and on, but actually conveys no tangible information at. It simply takes up space and should not really be read.
+    </p>
+  
+    <p>
+      And yet, here you are, still persevering in reading this placeholder text, hoping for some more insights, or some hidden easter egg of content. A joke, perhaps. Unfortunately, there's none of that here.
+    </p>
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
