--- a/inicio.html
+++ b/inicio.html
@@ -49,13 +49,38 @@
         </div>
       </nav>
 </header>
-<div class="container-fluid noPad">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-8 col-md-12 col-sm-12">
+    <canvas id="grafica"></canvas>
+  </div>
+  <div class="col-lg-2 col-md-6 col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Reportes repetidos</h5>
+        <p class="card-text">Se estan duplicando los reportes</p>
+        <a href="#" class="btn btn-primary">Ir Al ticket</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-2 col-md-6 col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Nuevo Desarrollo</h5>
+        <p class="card-text">Nuevo Modulo de ventas</p>
+        <a href="#" class="btn btn-primary">Ir Al ticket</a>
+      </div>
+    </div>
+  </div>
+</div>
+  
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
 <script src="assets/js/viaticket.js"></script> 
 </body>
 </html>
