--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                 <form>
                     <div class="mb-3">
                         <label for="login" class="form-label">Email o Usuario</label>
-                        <input type="loginUsuario" class="form-control border border-primary" id="login">
+                        <input type="text" class="form-control border border-primary" id="usuario">
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
@@ -39,6 +39,7 @@
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>  
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
         <script src="assets/js/viaticket.js"></script>
     </body>
 
