--- a/caracteristicas.html
+++ b/caracteristicas.html
@@ -67,14 +67,14 @@
    
    <div class="col-lg-12 col-md-12 col-sm-12 bg-primary pt-2">    
       <p class="lead float-start text-light"><strong>Nuevo Ticket</strong></p>
-      <button class="btn btn-primary float-end " type="button" data-bs-toggle="collapse" data-bs-target="#divNewTicket" aria-expanded="false" aria-controls="collapseExample">
+      <button class="btn btn-primary float-end " type="button" data-bs-toggle="collapse" data-bs-target="#divNewTicket" aria-expanded="true">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-square" viewBox="0 0 16 16">
           <path d="M3.626 6.832A.5.5 0 0 1 4 6h8a.5.5 0 0 1 .374.832l-4 4.5a.5.5 0 0 1-.748 0l-4-4.5z"/>
           <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2z"/>
         </svg>
       </button>    
    </div>
-   <div id="divNewTicket" class="collapse align-content-center"> 
+   <div id="divNewTicket" class="show align-content-center"> 
     <picture class="mx-auto">
       <source  media="(min-width:992px)" srcset="assets/img/newTicket.jpg">
       <source  media="(min-width:768px)" srcset="assets/img/newTicket_tablet.jpg">      
@@ -143,7 +143,7 @@
     <hr>
     <div class="col-lg-12 col-md-12 col-sm-12 bg-primary pt-2">    
       <p class="lead float-start text-light"><strong>Tickets Abiertos</strong></p>
-      <button class="btn btn-primary float-end " type="button" data-bs-toggle="collapse" data-bs-target="#divTicketsA" aria-expanded="false" aria-controls="collapseExample">
+      <button class="btn btn-primary float-end " type="button" data-bs-toggle="collapse" data-bs-target="#divTicketsA" aria-expanded="false" aria-controls="divTicketsA">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-square" viewBox="0 0 16 16">
           <path d="M3.626 6.832A.5.5 0 0 1 4 6h8a.5.5 0 0 1 .374.832l-4 4.5a.5.5 0 0 1-.748 0l-4-4.5z"/>
           <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2z"/>
@@ -221,7 +221,7 @@
 
     <div class="col-lg-12 col-md-12 col-sm-12 bg-primary pt-2">    
       <p class="lead float-start text-light"><strong>Historial de Tickets</strong></p>
-      <button class="btn btn-primary float-end " type="button" data-bs-toggle="collapse" data-bs-target="#divHistorial" aria-expanded="false" aria-controls="collapseExample">
+      <button class="btn btn-primary float-end " type="button" data-bs-toggle="collapse" data-bs-target="#divHistorial" aria-expanded="false" aria-controls="divHistorial">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-square" viewBox="0 0 16 16">
           <path d="M3.626 6.832A.5.5 0 0 1 4 6h8a.5.5 0 0 1 .374.832l-4 4.5a.5.5 0 0 1-.748 0l-4-4.5z"/>
           <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2z"/>
