--- a/perfil.html
+++ b/perfil.html
@@ -35,7 +35,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="newTicket.html">NUEVO TICKET</a></li>
-                <li><a class="dropdown-item" href="#">TICKETS ABIERTOS</a></li>
+                <li><a class="dropdown-item"  href="ticketsAbiertos.html">TICKETS ABIERTOS</a></li>
                 <li><a class="dropdown-item" href="historial.html">HISTORIAL</a></li>
               </ul>
             </li>
