Cambios de svg parte 2
de svg a icon y responsividad de dashboard intento 1231231231

--- a/dashboard.html
+++ b/dashboard.html
@@ -62,11 +62,71 @@
     </nav>
   </header>
   <div class="container">
-    <div class="row">
-      <div class="col overflow-hidden order-1">
+    <div class="row-flex">
+      <div class="col-lg-9 col-md-12 col-sm-12 float-lg-start">
         <canvas id="grafica"></canvas>
       </div>
-      <div class="col-9  order-3">
+      <div class="col col-sm-6 col-md-4 col-lg-3  float-lg-end">
+
+        <h3>Tickets Prioritarios</h3>
+        <div class="row row-cols-lg-auto">
+          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
+            <div class="card text-bg-danger">
+              <div class="card-body">
+                <h5 class="card-title">Reportes de Errores - 22/11/2022</h5>
+                <p class="card-text">Se estan duplicando los Informes</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
+            <div class="card text-bg-warning">
+              <div class="card-body">
+                <h5 class="card-title">Nuevo Desarrollo - 12/12/2022</h5>
+                <p class="card-text">Nuevo Modulo de ventas</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
+            <div class="card text-bg-info">
+              <div class="card-body">
+                <h5 class="card-title">Mesa de Ayuda - 04/01/2023</h5>
+                <p class="card-text">Rebotan los correos</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
+            <div class="card text-bg-info">
+              <div class="card-body">
+                <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
+                <p class="card-text">Crear nueva cuenta de correo</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
+            <div class="card text-bg-info">
+              <div class="card-body">
+                <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
+                <p class="card-text">bloquear cuenta</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+          <div class="mt-2 col col-lg-12 col-md-12 col-sm-12">
+            <div class="card text-bg-info">
+              <div class="card-body">
+                <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
+                <p class="card-text">Instalacion de software</p>
+                <a href="#" class="btn btn-primary">Ir Al ticket</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="pe-3 col-lg-9 col-md-12 col-sm-6 float-lg-start">
         <div class="clearfix mt-4">
           <img src="assets/img/team.jpg" class="rounded col-md-6 float-md-end mb-3 ms-md-3 col-sm-12" alt="...">
           <h2>Acerca de Nosotros</h2>
@@ -87,64 +147,7 @@
           </p>
         </div>
       </div>
-      <div class="order-2 col-3 align-items-end">
 
-        <h3>Tickets Prioritarios</h3>
-        <div class="mt-2">
-          <div class="card text-bg-danger">
-            <div class="card-body">
-              <h5 class="card-title">Reportes de Errores - 22/11/2022</h5>
-              <p class="card-text">Se estan duplicando los Informes</p>
-              <a href="#" class="btn btn-primary">Ir Al ticket</a>
-            </div>
-          </div>
-        </div>
-        <div class="mt-2">
-          <div class="card text-bg-warning">
-            <div class="card-body">
-              <h5 class="card-title">Nuevo Desarrollo - 12/12/2022</h5>
-              <p class="card-text">Nuevo Modulo de ventas</p>
-              <a href="#" class="btn btn-primary">Ir Al ticket</a>
-            </div>
-          </div>
-        </div>
-        <div class="mt-2">
-          <div class="card text-bg-info">
-            <div class="card-body">
-              <h5 class="card-title">Mesa de Ayuda - 04/01/2023</h5>
-              <p class="card-text">Rebotan los correos</p>
-              <a href="#" class="btn btn-primary">Ir Al ticket</a>
-            </div>
-          </div>
-        </div>
-        <div class="mt-2">
-          <div class="card text-bg-info">
-            <div class="card-body">
-              <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
-              <p class="card-text">Crear nueva cuenta de correo</p>
-              <a href="#" class="btn btn-primary">Ir Al ticket</a>
-            </div>
-          </div>
-        </div>
-        <div class="mt-2">
-          <div class="card text-bg-info">
-            <div class="card-body">
-              <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
-              <p class="card-text">bloquear cuenta</p>
-              <a href="#" class="btn btn-primary">Ir Al ticket</a>
-            </div>
-          </div>
-        </div>
-        <div class="mt-2">
-          <div class="card text-bg-info">
-            <div class="card-body">
-              <h5 class="card-title">Mesa de Ayuda - 05/01/2023</h5>
-              <p class="card-text">Instalacion de software</p>
-              <a href="#" class="btn btn-primary">Ir Al ticket</a>
-            </div>
-          </div>
-        </div>
-      </div>
       
     </div>
   </div>
@@ -153,9 +156,9 @@
     <div class="container">
       <div class="row">
         <span class="text-center"> Sistema web desarrollado por AnotherDislexicDev &#174;
-          <i class="bi bi-git"></i>
-          <i class="bi bi-linkedin"></i>
-          <i class="bi bi-envelope-at"></i></span>
+          <i class="bi fa-3x bi-git"></i>
+          <i class="bi fa-3x bi-linkedin"></i>
+          <i class="bi fa-3x bi-envelope-at"></i></span>
       </div>
     </div>
   </footer>
