--- a/perfil.html
+++ b/perfil.html
@@ -44,9 +44,7 @@
           <form class="d-flex" role="search">
             <div class="dropdown me-2">
               <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                  <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
-                </svg>
+                <i class="bi bi-person"></i>
               </button>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="perfil.html">Perfil</a></li>
@@ -100,9 +98,9 @@
   <div class="container">
     <div class="row">
      <span class="text-center"> Sistema web desarrollado por AnotherDislexicDev &#174; 
-      <i class="bi bi-git"></i>
-          <i class="bi bi-linkedin"></i>
-          <i class="bi bi-envelope-at"></i></span>
+      <i class="bi fa-3x fa-3x bi-git"></i>
+      <i class="bi fa-3x fa-3x bi-linkedin"></i>
+      <i class="bi fa-3x fa-3xbi-envelope-at"></i></span>
     </div>
   </div>
 </footer>
