--- a/historial.html
+++ b/historial.html
@@ -126,9 +126,9 @@
   <div class="container">
     <div class="row">
      <span class="text-center"> Sistema web desarrollado por AnotherDislexicDev &#174; 
-      <i class="bi bi-git"></i>
-          <i class="bi bi-linkedin"></i>
-          <i class="bi bi-envelope-at"></i></span>
+      <i class="bi fa-3x bi-git"></i>
+      <i class="bi fa-3x bi-linkedin"></i>
+      <i class="bi fa-3x bi-envelope-at"></i></span>
     </div>
   </div>
 </footer>
