--- a/historial.html
+++ b/historial.html
@@ -61,60 +61,83 @@
 <div class="container">
   <div class="row">
     <div class="col">
+      <span ><h4>Historia de Tickets Resueltos</h4></span>  
       <table class="table">
         <thead>
           <tr>
-            <th scope="col">Class</th>
-            <th scope="col">Heading</th>
-            <th scope="col">Heading</th>
+            <th scope="col">ID</th>
+            <th scope="col">Asunto</th>
+            <th class="d-none d-md-table-cell" scope="col">Fecha Inicio</th>
+            <th class="d-none d-md-table-cell" scope="col">Estado</th>
+            <th scope="col">Acciones</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <th scope="row">Default</th>
-            <td>Cell</td>
-            <td>Cell</td>
-          </tr>
-          
-            <tr class="table-primary">
-              <th scope="row">Primary</th>
-              <td>Cell</td>
-              <td>Cell</td>
-            </tr>
-            <tr class="table-secondary">
-              <th scope="row">Secondary</th>
-              <td>Cell</td>
-              <td>Cell</td>
+        <tbody>           
+            <tr class="table-success">
+              <th scope="row">00001</th>
+              <td >Nuevo modulo de reportes</td>
+              <td class="d-none d-md-table-cell">22/11/2022</td>
+              <td class="d-none d-md-table-cell">Resuelto</td>
+              <td>
+                <button class="btn btn-sm btn-info"><i class="bi bi-search"></i></button>
+                <button class="btn btn-sm btn-warning"><i class="bi bi-pencil"></i></button>
+                <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+              </td>
             </tr>
             <tr class="table-success">
-              <th scope="row">Success</th>
-              <td>Cell</td>
-              <td>Cell</td>
+              <th scope="row">00002</th>
+              <td>Opcion de descargar reportes en PDF</td>
+              <td class="d-none d-md-table-cell">12/12/2022</td>
+              <td class="d-none d-md-table-cell">Resuelto</td>
+              <td>
+                <button class="btn btn-sm btn-info"><i class="bi bi-search"></i></button>
+                <button class="btn btn-sm btn-warning"><i class="bi bi-pencil"></i></button>
+                <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+              </td>
             </tr>
-            <tr class="table-danger">
-              <th scope="row">Danger</th>
-              <td>Cell</td>
-              <td>Cell</td>
+            <tr class="table-success">
+              <th scope="row">00003</th>
+              <td>Instalar y configurar Outlock</td>
+              <td class="d-none d-md-table-cell">04/01/2023</td>
+              <td class="d-none d-md-table-cell">Resuelto</td>
+              <td>
+                <button class="btn btn-sm btn-info"><i class="bi bi-search"></i></button>
+                <button class="btn btn-sm btn-warning"><i class="bi bi-pencil"></i></button>
+                <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+              </td>
             </tr>
             <tr class="table-warning">
-              <th scope="row">Warning</th>
-              <td>Cell</td>
-              <td>Cell</td>
+                <th scope="row">00004</th>
+                <td>Version movil del Sistema</td>
+                <td class="d-none d-md-table-cell">05/01/2023</td>
+                <td class="d-none d-md-table-cell">Cerrado</td>
+                <td>
+                  <button class="btn btn-sm btn-info"><i class="bi bi-search"></i></button>
+                  <button class="btn btn-sm btn-warning"><i class="bi bi-pencil"></i></button>
+                  <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+                </td>
             </tr>
-            <tr class="table-info">
-              <th scope="row">Info</th>
-              <td>Cell</td>
-              <td>Cell</td>
+            <tr class="table-success">
+                <th scope="row">00005</th>
+                <td>Cargar listado de empleados</td>
+                <td class="d-none d-md-table-cell">04/01/2023</td>
+                <td class="d-none d-md-table-cell">Resuelto</td>
+                <td>
+                  <button class="btn btn-sm btn-info"><i class="bi bi-search"></i></button>
+                  <button class="btn btn-sm btn-warning"><i class="bi bi-pencil"></i></button>
+                  <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+                </td>
             </tr>
-            <tr class="table-light">
-              <th scope="row">Light</th>
-              <td>Cell</td>
-              <td>Cell</td>
-            </tr>
-            <tr class="table-dark">
-              <th scope="row">Dark</th>
-              <td>Cell</td>
-              <td>Cell</td>
+            <tr class="table-success">
+                <th scope="row">00006</th>
+                <td>Instalacion de SAP</td>
+                <td class="d-none d-md-table-cell">05/01/2023</td>
+                <td class="d-none d-md-table-cell">Resuelto</td>
+                <td>
+                  <button class="btn btn-sm btn-info"><i class="bi bi-search"></i></button>
+                  <button class="btn btn-sm btn-warning"><i class="bi bi-pencil"></i></button>
+                  <button class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></button>
+                </td>
             </tr>
         </tbody>
       </table>
